# fourier-grx-HXC

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.en.md  README.md  _config.yaml  docker_run.sh  index.md  install_env.sh  pyproject.toml
.github/workflows/: pages.yml
_includes/: head_custom.html  header_custom.html
config/hxc/: config_HXC_T1_debug.yaml  config_HXC_T1_offline.yaml
docs/: changelog.md  contributing.md  faq.md  quickstart.md  reference.md  release.md  usage.md
docs/en/: contributing.md  faq.md  index.md  quickstart.md  reference.md  release.md  usage.md
docs/en/quickstart/: environment.md  install_and_run.md  package.md
docs/en/reference/: configuration.md  packaging_flow.md  repository_layout.md  runtime_commands.md
docs/quickstart/: environment.md  install_and_run.md  package.md
docs/reference/: configuration.md  packaging_flow.md  repository_layout.md  runtime_commands.md
fourier-core/: .gitignore  Makefile  README.md  pyproject.toml
fourier-core/src/fourier_core/: __init__.py
fourier-core/src/fourier_core/actuator/: README.cn.md  __init__.py  fi_actuator_base.py  fi_actuator_fi_ace.py  fi_actuator_manager.py  fi_actuator_motor.py
fourier-core/src/fourier_core/config/: README.cn.md  __init__.py  config.json  config.yaml  fi_config.py  zenoh_config.py
fourier-core/src/fourier_core/hardware/: README.cn.md  README.md  __init__.py  fi_hardware_base.py  fi_hardware_connect.py  fi_hardware_disconnect.py  fi_hardware_fi_ace.py  fi_hardware_import.py  fi_hardware_manager.py  fi_hardware_predefine.py  fi_hardware_usb_imu.py  fi_hardware_usb_imu_forsense.py  fi_hardware_x64.py
fourier-core/src/fourier_core/hardware/fi/: README.cn.md
fourier-core/src/fourier_core/hardware/fi/ace/: fi_ace_client.py  fi_ace_device.py  fi_ace_logger.py  fi_ace_model.py  fi_ace_predefine.py
fourier-core/src/fourier_core/hardware/forsense/: forsense_imu_usb_async.py  forsense_imu_usb_async_client.py  forsense_imu_usb_async_server.py  forsense_imu_usb_model.py  forsense_predefine.py  forsense_protocol.py
fourier-core/src/fourier_core/joint/: README.cn.md  __init__.py  fi_joint_base.py  fi_joint_rotary.py
fourier-core/src/fourier_core/link/: README.cn.md  __init__.py  fi_link_base.py  fi_link_linear.py
fourier-core/src/fourier_core/logger/: README.cn.md  __init__.py  fi_log_font.py  fi_logger_legacy.py  fi_logger_level.py  fi_logger_loguru.py
fourier-core/src/fourier_core/predefine/: README.cn.md  __init__.py  fi_flag_state.py  fi_function_result.py  fi_print_color.py
fourier-core/src/fourier_core/predefine/actuator/: fi_actuator_comm_type.py  fi_actuator_control_mode.py  fi_actuator_fi_ace_control_mode.py  fi_actuator_fi_ace_type.py  fi_actuator_home_method.py  fi_actuator_manufactor.py  fi_actuator_mode_of_operation.py  fi_actuator_state.py
fourier-core/src/fourier_core/predefine/hardware/: fi_can_comm_type.py  fi_flash_state.py  fi_hardware_type.py  fi_iap_error_code.py  fi_io_state.py  fi_led_state.py  fi_sensor_comm_type.py  fi_switch_state.py
fourier-core/src/fourier_core/predefine/joint/: fi_joint_control_mode.py
fourier-core/src/fourier_core/schedule/: ischedule.py
fourier-core/src/fourier_core/sensor/: README.cn.md  __init__.py  fi_sensor_base.py  fi_sensor_imu.py  fi_sensor_manager.py  fi_sensor_usb_imu.py  fi_sensor_usb_imu_forsense.py
fourier-core/src/fourier_core/tool/: double_buffer.py  parse_zenoh_credentials.py  share_memory_between_process.py  system_id.py  triple_buffer.py
issues/: architecture-multi-dev.md
lib/fi_ace/: fi_ace-0.0.0.1-cp311-none-manylinux2014_x86_64.whl  fi_ace-0.0.0.3-cp311-none-manylinux2014_x86_64.whl
lib/motion_bank/: motion_bank_python-0.1.7-py3-none-any.whl
lib/motion_bank/python_command/: break_cmd.py  heart_beat.py  loop_play.py  play_cmd.py  send_cmd.py  stop_cmd.py
release/: config.sh  deb_control.in  deb_postinst.sh  deb_run.sh  grce-net_2.0.0-2.deb  install_for_zip.sh  jenkins.sh  list.sh  run.py  run.sh  setup.sh  setup_conda_env.sh  setup_conda_env_py310.sh  setup_disable_ipv6.sh  setup_disable_service.sh  setup_enable_service.sh  setup_pass_sudo.sh  setup_static_ipv4.sh  setup_ubuntu_env.sh
resource/hxc/locomotion/: hxc_leg_body_rl_walk_airtime.pt  hxc_leg_body_rl_walk_cpg.pt
resource/zenoh/: credentials.txt  user.yaml
scripts/: build_pyinstaller.py
shells/: create_config_link.sh  create_resource_link.sh  dependencies.sh  setup_conda_env.sh
src/fourier_grx/: __init__.py  __main__.py
src/fourier_grx/algorithm/: fi_algorithm_base.py  fi_algorithm_math_base.py  fi_algorithm_robot_base.py
src/fourier_grx/callback/: README.cn.md  __init__.py  fi_callback.py
src/fourier_grx/comm/: README.cn.md  __init__.py  fi_dynalink_base.py  fi_dynalink_comm.py  fi_dynalink_core.py  fi_dynalink_error.py  fi_dynalink_grx.py  fi_dynalink_hardware.py  fi_dynalink_manager.py  fi_dynalink_manager_grx.py  fi_dynalink_protocol.py  fi_dynalink_rehab.py  fi_dynalink_robot.py  fi_dynalink_ros.py  fi_dynalink_task.py
src/fourier_grx/config/: fi_config_validator.py  record.py  resource.py
src/fourier_grx/control_system/: README.cn.md  __init__.py  fi_control_system.py  fi_control_system_developer_mode.py  fi_control_system_other_mode.py
src/fourier_grx/fsm/: __init__.py  fi_fsm_data.py  fi_fsm_item.py  fi_fsm_manager.py
src/fourier_grx/license/: fi_license.py
src/fourier_grx/main/: README.cn.md  main.py
src/fourier_grx/peripheral/: __init__.py  fi_inputs.py  fi_peripheral_joystick.py  fi_peripheral_joystick_interface.py  fi_peripheral_joystick_type.py  fi_peripheral_keyboard.py  fi_peripheral_keyboard_interface.py  fi_peripheral_keyboard_pygame.py  fi_peripheral_keyboard_type.py  fi_peripheral_virtual_joystick.py  fi_peripheral_virtual_joystick_interface.py  fi_peripheral_virtual_keyboard.py  fi_peripheral_virtual_keyboard_interface.py  fi_peripheral_virtual_mouse.py  fi_peripheral_virtual_mouse_interface.py  fi_peripheral_virtual_panel.py  fi_peripheral_virtual_panel_interface.py  fi_peripheral_virtual_teleoperation.py  fi_peripheral_virtual_teleoperation_interface.py  (+6 more)
(+204 files in other folders)
